[package]
name = "blackmagic-sys"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Mattia Fiumara <mfiumara@proton.me>"]
description = "Bindings to Blackmagic-debug host functions"
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
